# ObenkyoAlert

./: README.md
src/: CMakeLists.txt  obenkyo_alert_nanodet.cpp  obenkyo_alert_nanodet.h
src/models/: mobilenet1.0.ncnn.param
